welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:32: error: not found: value decalage
    Brosse(T(k+decalage))
               ^